--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ baseurl:            "/"
 url:                "https://cytrong.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+twitter_username:   CytrongCybersec
+github_username:    cytrong
+facebook_username:  
 instagram_username:  
 linkedin_username:
 
