--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              Clean Blog
+title:              Cytrong Cybersecurity
 email:              your-email@example.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
