--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              Cytrong Cybersecurity
 email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
+description:        Ciberseguridad técnica
+author:             Cytrong Cybersecurity
 baseurl:            "/"
 url:                "https://cytrong.github.io"
 
