--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Cytrong Cybersecurity
-email:              your-email@example.com
-description:        Ciberseguridad técnica
+email:              info@cytrong.com
+description:        Blog de Ciberseguridad
 author:             Cytrong Cybersecurity
 baseurl:            "/"
 url:                "https://cytrong.github.io"
